modified:   src/css/style.min.css 	new file:   src/icons/up.svg 	modified:   src/index.html 	new file:   src/sass/base/_animations.scss 	modified:   src/sass/blocks/_advantages.scss 	new file:   src/sass/blocks/_pageup.scss 	modified:   src/sass/style.scss

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <section class="promo">
+    <section id="up" class="promo">
       <div class="container">
         <header class="header">
           <a href="#" class="header__logo">
@@ -82,7 +82,7 @@
             <img
               src="icons/advantages/heart.png"
               alt="heart"
-              class="advantages__icon"
+              class="advantages__icon advantages__icon_animated"
             />
             <div class="advantages__subtitle">Заботимся о здоровье</div>
             <div class="advantages__descr">
